--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elli</title>
   <link rel="stylesheet" href="src/pages/splashPage/styles.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
@@ -16,8 +17,8 @@
       <div id="splash-title" class="splash-title">Welcome</div>
     </div>
     <div id="game-list-container" class="game-list-container">
-      <div class="game-card">
-
+      <div class="game-card w3-animate-opacity">
+        <img src="src/assets/images/dog-and-cat-cover.jpg" />
       </div>
       <div class="more-games-container">More games will be added soon.</div>
     </div>
