--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <div id="splash-title" class="splash-title">Welcome</div>
     </div>
     <div id="game-list-container" class="game-list-container">
-      <div class="game-card w3-animate-opacity">
+      <div class="game-card w3-animate-opacity" onClick="location.href='src/pages/gameDescriptionPage/index.html'">
         <img src="src/assets/images/dog-and-cat-cover.jpg" />
+        <div class="game-card-title">Cats vs Dogs</div>
       </div>
       <div class="more-games-container">More games will be added soon.</div>
     </div>
