Changed file structure

--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elli</title>
-  <link rel="stylesheet" href="src/pages/splashPage/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://connect.facebook.net/en_US/fbinstant.6.3.js"></script>
+  <script src="main.js"></script>
 </head>
 <body>
-  <script src="https://connect.facebook.net/en_US/fbinstant.6.3.js"></script>
-  <script src="src/pages/splashPage/main.js"></script>
-  <div class="splash-container">
-    <div class="logo-container">
-      <img src="src/assets/images/elli.png" width="150"/>
-      <div id="splash-title" class="splash-title">Welcome</div>
-    </div>
-    <div id="game-list-container" class="game-list-container">
-      <div class="game-card w3-animate-opacity" onClick="location.href='src/pages/gameDescriptionPage/index.html'">
-        <img src="src/assets/images/dog-and-cat-cover.jpg" />
-        <div class="game-card-title">Cats vs Dogs</div>
+  <div id='visible-container'>
+    <div class="splash-container">
+      <div class="logo-container">
+        <img src="src/assets/images/elli.png" width="150"/>
+        <div id="splash-title" class="splash-title"></div>
       </div>
-      <div class="more-games-container">More games will be added soon.</div>
+      <div id="game-list-container" class="game-list-container">
+        <div class="game-card w3-animate-opacity" onclick="onClickGameCard()">
+          <img src="src/assets/images/dog-and-cat-cover.jpg" />
+          <div class="game-card-title">Cats vs Dogs</div>
+        </div>
+        <div class="more-games-container">More games will be added soon.</div>
+      </div>
     </div>
   </div>
 </body>
